--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -1039,7 +1039,10 @@
           "noToolsAvailable": "No tools available"
         },
         "deleteServer": "Delete Server",
-        "deleteServerConfirm": "Are you sure you want to delete this server?"
+        "deleteServerConfirm": "Are you sure you want to delete this server?",
+        "registry": "Package Registry",
+        "registryTooltip": "Choose the registry for package installation to resolve network issues with the default registry.",
+        "noRegistry": "None"
       },
       "messages.divider": "Show divider between messages",
       "messages.grid_columns": "Message grid display columns",
